@@ -25,15 +25,19 @@ package gc.z;
 
 /*
  * @test TestAllocateHeapAt
- * @requires vm.gc.ZGenerational & os.family == "linux"
+ * @requires vm.gc.Z & os.family == "linux"
  * @requires !vm.opt.final.UseLargePages
+ * @requires !vm.opt.final.UseTransparentHugePages
  * @summary Test ZGC with -XX:AllocateHeapAt
  * @library /test/lib
  * @run main/othervm gc.z.TestAllocateHeapAt . true
  * @run main/othervm gc.z.TestAllocateHeapAt non-existing-directory false
  */
 
+import jdk.test.lib.os.linux.HugePageConfiguration;
+import jdk.test.lib.os.linux.HugePageConfiguration.ShmemTHPMode;
 import jdk.test.lib.process.ProcessTools;
+import jtreg.SkippedException;
 
 public class TestAllocateHeapAt {
     public static void main(String[] args) throws Exception {
@@ -42,9 +46,15 @@ public class TestAllocateHeapAt {
         final String heapBackingFile = "Heap Backing File: " + directory;
         final String failedToCreateFile = "Failed to create file " + directory;
 
+        final HugePageConfiguration hugePageConfiguration = HugePageConfiguration.readFromOS();
+        final ShmemTHPMode mode = hugePageConfiguration.getShmemThpMode();
+
+        if (mode != ShmemTHPMode.never && mode != ShmemTHPMode.advise) {
+            throw new SkippedException("The UseTransparentHugePages option may not be respected with Shmem THP Mode: " + mode.name());
+        }
+
         ProcessTools.executeTestJava(
             "-XX:+UseZGC",
-            "-XX:+ZGenerational",
             "-Xlog:gc*",
             "-Xms32M",
             "-Xmx32M",
